asteria/core/tests/errors/elaboration_errors/term_constructor_not_in_scope_hint_closest_term_constructors.asteriacode
data Foo where
   | Quux : Test$Foo()
   | Baar : Test$Foo()
   | Bar : Test$Foo()
   ;;

x : Test$Foo()
  = Baa(;)
  ;;
